--- a/styles/engine/sprites.css
+++ b/styles/engine/sprites.css
@@ -7,5 +7,39 @@
     width: var(--ssfw);
     height: var(--ssfh);
 
-    background-position: calc(var(--ssx) * var(--ssfw)) calc(var(--ssy) * var(--ssfh));
+    overflow: hidden;
+}
+
+.xxmSprite:before {
+    position: absolute;
+
+    display: block;
+
+    content: '';
+
+    width: calc(100% * var(--ssfc));
+    height: 100%;
+
+    background-image: var(--sprite-url);
+    background-position: 0 calc(var(--ssy) * var(--ssfh));
+}
+
+@keyframes frames {
+    from {
+        left: 0;
+    }
+
+    to {
+        left: calc(-1 * var(--ssfc) * var(--ssfw));
+    }
+}
+
+.xxmSprite.xxmAnimate:before {
+    animation: frames steps(4, end) infinite;
+    animation-duration: var(--anim-duration);
+    animation-delay: calc(-1 * var(--anim-duration) / var(--ssfc));
+}
+
+.xxmSprite.xxmWalk {
+    transition: var(--walk-duration) linear left, var(--walk-duration) linear top;
 }
