--- a/styles/test.css
+++ b/styles/test.css
@@ -3,8 +3,6 @@ body {
 
     align-items: center;
     justify-content: center;
-
-    cursor: pointer;
 }
 
 .xxmLayers {
@@ -14,4 +12,6 @@ body {
     background-color: antiquewhite;
 
     border-radius: 50px;
+
+    overflow: hidden;
 }
