--- a/styles/engine/tilemaps.css
+++ b/styles/engine/tilemaps.css
@@ -18,4 +18,6 @@
 
     background-image: var(--tilemap-url);
     background-position: calc(-1 * var(--tsx) * var(--tw)) calc(-1 * var(--tsy) * var(--th));
+
+    z-index: var(--y);
 }
