--- a/styles/engine/tilemaps.css
+++ b/styles/engine/tilemaps.css
@@ -19,4 +19,6 @@
     background-image: var(--tilesetUrl);
     background-position-x: calc(-1 * var(--tsx) * var(--tw));
     background-position-y: calc(-1 * var(--tsy) * var(--th));
+
+    z-index: -1;
 }
