--- a/styles/engine/windows.css
+++ b/styles/engine/windows.css
@@ -2,6 +2,7 @@
     display: inline-block;
 
     border-image: url(../../system/windowBorders.png) 7;
+    border-style: solid;
 
     padding: 6px 8px;
 
