--- a/style/engine/messageBox.css
+++ b/style/engine/messageBox.css
@@ -12,7 +12,7 @@
 
     margin-left: 4px;
 
-    background-image: url(../../system/waitCursor.png);
+    background-image: url(../../data/system/waitCursor.png);
     background-repeat: no-repeat;
     background-position: center;
 
