--- a/style/engine/windows.css
+++ b/style/engine/windows.css
@@ -1,7 +1,7 @@
 .xxmWindow {
     display: inline-block;
 
-    border-image: url(../../system/windowBorders.png) 7;
+    border-image: url(../../data/system/windowBorders.png) 7;
     border-style: solid;
 
     padding: 6px 8px;
